<resources>
    <string name="app_name">ET Legacy</string>
	<string name="config_editor_name">Config Editor</string>
	<string name="key_config_page_name">OnScreen Button Config</string>
	<string name="setup_all_opacity">Setup all opacity</string>
    <string name="setup_all_size">Setup all size</string>
    <string name="reset_on_screen_controls">Reset on-screen controls</string>
    <string name="save_all">Save all</string>
    <string name="opacity">opacity</string>
    <string name="size">size</string>
    <string name="setup_all_on_screen_button_size">Setup all on-screen button size</string>
	<string name="_mod">Mod</string>
	<string name="image">Image</string>
	<string name="ok">OK</string>
	<string name="lighting">Lighting</string>
    <string name="cancel">Cancel</string>
    <string name="reset">Reset</string>
	<string name="_sound">Sound</string>
	<string name="shadow">Shadow</string>
	<string name="renderer">Renderer</string>
	<string name="general">General</string>
	<string name="graphics">Graphics</string>
	<string name="controls">Controls</string>
	<string name="note_gamepads_keyboards_must_be_configured_in_game_like_on_pc_not_here">Note: Gamepads/Keyboards must be configured in-game (like on PC), not here</string>
	<string name="configure_on_screen_controls">Configure on-screen controls</string>
	<string name="on_screen_button_setting">On-screen button setting</string>
	<string name="setup_on_screen_button_theme">Setup on-screen button theme</string>
	<string name="smooth_joystick">Smooth joystick</string>
	<string name="autodetect_mouse">Autodetect mouse</string>
	<string name="mouse_event_device">Mouse event device:</string>
	<string name="enable_gyroscope">Enable gyroscope</string>
	<string name="multitouch_shoot_left_mouse_button_click_on_a_second_touch">Multitouch shoot (left mouse button click on a second touch)</string>
	<string name="x_axis_sensitivity">X-Axis sensitivity</string>
	<string name="y_axis_sensitivity">Y-Axis sensitivity</string>
	<string name="x_axis_sensitivity_of_gyroscope">X-Axis sensitivity of gyroscope</string>
	<string name="y_axis_sensitivity_of_gyroscope">Y-Axis sensitivity of gyroscope</string>
	<string name="hide_onscreen_buttons">Hide onscreen buttons</string>
	<string name="using_mouse">Using mouse</string>
	<string name="mouse_settings">Mouse settings:</string>
	<string name="color_bits">Color bits</string>
	<string name="_32bits">32Bits</string>
	<string name="_16bits_rgb565">16Bits(RGB565)</string>
	<string name="_16bits_rgba4444">16Bits(RGBA4444)</string>
	<string name="_16bits_rgba5551">16Bits(RGBA5551)</string>
	<string name="_32bits_rgba1010102">32Bits(RGBA1010102)</string>
	<string name="_0_auto_using_screen_aspect_ratio">(0 - Auto using screen aspect ratio)</string>
	<string name="msaa_warning_tegra_doesn_t_support_it">MSAA: (Warning, Tegra doesn\'t support it)</string>
	<string name="scale_with_screen_aspect_ratio">Scale with screen aspect ratio: </string>
	<string name="screen_resolution">Screen resolution:</string>
	<string name="fullscreen">Fullscreen</string>
	<string name="custom">Custom</string>
	<string name="_1x_none">1x (None)</string>
	<string name="_4x">4x</string>
	<string name="_16x">16x</string>
	<string name="toggle_key">Toggle key</string>
	<string name="touch_type">Touch type</string>
	<string name="slider_type">Slider type</string>
	<string name="key">Key</string>
	<string name="key_2">Key 2</string>
	<string name="doom_3">DOOM 3</string>
	<string name="quake_4">Quake 4</string>
	<string name="quake_1">Quake 1</string>
	<string name="quake_2">Quake 2</string>
	<string name="quake_3">Quake 3</string>
	<string name="rtcw">RTCW</string>
	<string name="tdm">Dark mod</string>
	<string name="doom">DOOM</string>
	<string name="debug">DEBUG</string>
	<string name="scroll_to_top">Top</string>
	<string name="scroll_to_bottom">Bottom</string>
	<string name="reload">Reload</string>
	<string name="option">Option</string>
	<string name="support_the_developer">Support the developer</string>
	<string name="save_launcher_settings">Save launcher settings</string>
	<string name="doom_3_bfg">DOOM 3 BFG</string>
	<string name="prey_2006">Prey(2006)</string>
	<string name="preference">Preference</string>
	<string name="key_3">Key 3</string>
	<string name="_scale_by_screen_area">Scale by screen area</string>
	<string name="scale_by_screen_width_height">Scale by screen width/height</string>
	<string name="mouse_cursor_position">Mouse cursor position:</string>
	<string name="top_left_corner">Top left corner</string>
	<string name="top_right_corner">Top right corner</string>
	<string name="joystick_visible">Joystick visible:</string>
	<string name="map_volume_keys">Map volume keys</string>
	<string name="volume_up">Volume Up</string>
	<string name="volume_down">Volume Down</string>
	<string name="bottom_left_corner">Bottom left corner</string>
	<string name="bottom_right_corner">Bottom right corner</string>
	<string name="unfixed_joystick">Unfixed joystick</string>
    <string name="_default">Default</string>
	<string name="changes">Changes</string>
	<string name="sound">Sound(s_driver)</string>
	<string name="about">About</string>
	<string name="gamelib">GameLib</string>
	<string name="license">License</string>
	<string name="extract_source">Extract source</string>
	<string name="last_runtime_log">Last runtime log</string>
	<string name="help">Help</string>
	<string name="update_">Update:</string>
	<string name="skip_intro">Skip intro</string>
	<string name="start_game">Start game</string>
	<string name="edit_config_file">Edit config file</string>
	<string name="choose_data_folder">Choose data folder</string>
	<string name="backup_settings">Backup settings</string>
	<string name="restore_settings">Restore settings</string>
	<string name="command_record">Command record</string>
	<string name="edit_cvar">Edit CVar</string>
	<string name="edit_autoexec_cfg">Edit autoexec.cfg</string>
	<string name="extract_resource">Extract resource</string>
	<string name="edit_external_game_library">Edit external game library</string>
	<string name="add_external_game_library">Add external game library</string>
	<string name="access_external_game_library">Access external game library</string>
	<string name="reset_onscreen_button_config">Reset on-screen button config?</string>
	<string name="onscreen_button_config_has_reset">On-screen button config has reset.</string>
	<string name="toggle">Toggle</string>
	<string name="button">Button</string>
	<string name="slider">Slider</string>
	<string name="save">Save</string>
	<string name="etw_base">Wolfenstein: Enemy Territory</string>
	<string name="restore">Restore</string>
	<string name="etw">ET: Legacy</string>
	<string name="_debug">Debug</string>
	<string name="last_crash_info">Last crash info</string>
	<string name="none">None</string>
	<string name="application_pid">"Application PID: "</string>
	<string name="file_chooser">File chooser</string>
	<string name="game_datas_standalone_directories">Game standalone directories</string>
	<string name="weapon_panel_keys">Weapon panel keys</string>
	<string name="operation">Operation</string>
	<string name="request_necessary_permissions">request necessary permissions</string>
	<string name="grant">Grant</string>
	<string name="special_cvar_list">Special Cvar list</string>
	<string name="edit_">"Edit "</string>
	<string name="hide_ad_bar">Hide ad bar</string>
	<string name="setup_launcher_theme">Setup launcher theme</string>
	<string name="language">Language</string>
	<string name="load_quicksave_when_start_game">Load QuickSave when start game</string>
	<string name="setup_launcher_language">Setup launcher language</string>
	<string name="auto_save_buttons_settings_immediately_if_changed">Auto save buttons settings immediately if changed</string>
	<string name="standalone_game_data_directory">Standalone game data directory</string>
	<string name="make_game_use_standalone_data_directory">Make game use standalone data directory</string>
	<string name="sub_directory">Sub directory: </string>
	<string name="auto_save_button_settings">Auto save button settings</string>
	<string name="screen">Screen</string>
	<string name="hide_ad_bar_in_launcher">Hide ad bar in launcher</string>
	<string name="redirect_output_to_file">Redirect output to file</string>
	<string name="run_background">Run background</string>
	<string name="launcher">Launcher</string>
	<string name="launcher_orientation">Launcher orientation</string>
	<string name="launcher_orientation_follow_system">Launcher orientation follow system</string>
	<string name="function_key_toolbar_offset">Function key toolbar offset</string>
	<string name="setup_function_key_toolbar_position_offset">Setup function key toolbar position offset</string>
	<string name="function_key_toolbar">Function key toolbar</string>
	<string name="show_function_key_toolbar_when_open_input_method">Show function key toolbar when open input method</string>
	<string name="setup_back_key_function">Setup Back key function</string>
	<string name="control_game_state_when_application_in_background">Control game state when application in background</string>
	<string name="game">Game</string>
	<string name="cover_screen_edges">Cover screen edges</string>
	<string name="cover_screen_edges_in_status_bar">Cover screen edges in status bar</string>
	<string name="hide_navigation_bar">Hide navigation bar</string>
	<string name="hide_navigation_bar_in_game">Hide navigation bar in game</string>
	<string name="show_game_datas_standalone_directories">Show game standalone directories</string>
	<string name="save_game_runtime_output_log_to_stdout_txt_stderr_txt">Save game runtime output log to stdout.txt/stderr.txt</string>
	<string name="map_back_key">Map Back key</string>
	<string name="launcher_settings">Launcher settings</string>
	<string name="open_documents">Android Storage Access Framework</string>
	<string name="last_dalvik_crash_info">Last dalvik crash info</string>
	<string name="load_local_engine_library">Load local engine library</string>
	<string name="open_system_file_browser">Open Android Storage Access Framework</string>
	<string name="if_you_do_not_want_to_debug_memory_usage_status_please_do_not_check_it_because_it_is_a_taking_time_operation">If you do not want to debug memory usage status, please do not enable it! Because it is a taking-time operation!</string>
	<string name="can_t_s_read_write_external_storage_permission_is_not_granted">Can\'t %s! Read/Write external storage permission is not granted!</string>
	<string name="render_memory_status_0_is_disable">Render memory status(0 is disable)</string>
	<string name="update_interval_second_0_disable">Update interval(Second): 0 - Disable</string>
	<string name="pid">PID</string>
	<string name="no_handle_signals">No handle signals</string>
	<string name="do_not_handle_signals">Do not handle signals</string>
	<string name="view_logcat">View logcat</string>
	<string name="open_logcat">Open logcat</string>
	<string name="get_application_pid">Get application PID</string>
	<string name="input_external_library_name">Input external library name</string>
	<string name="e_g">e.g.</string>
	<string name="add_game_library_file_success">Add game library file success.</string>
	<string name="add_game_library_file_fail">Add game library file fail!</string>
	<string name="save_preferences_file">save preferences file</string>
	<string name="not_supported">Not supported!</string>
	<string name="backup_preferences_file_success">Backup preferences file success.</string>
	<string name="backup_preferences_file_fail">Backup preferences file fail:</string>
	<string name="backup_preferences_file_error">Backup preferences file error.</string>
	<string name="check_for_update">Check for update</string>
	<string name="settings">Settings</string>
	<string name="translators">Translators</string>
	<string name="other">Other</string>
	<string name="theme">Theme</string>
</resources>