<?xml version="1.0" encoding="utf-8"?>
    <PreferenceScreen
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:title="@string/launcher_settings"
        >

    <PreferenceCategory
        android:key="screen"
        android:title="@string/screen"
        >
        <CheckBoxPreference
            android:title="@string/hide_navigation_bar"
            android:key="harm_hide_nav"
            android:persistent="true"
            android:defaultValue="true"
            android:summary="@string/hide_navigation_bar_in_game"
            />
        <CheckBoxPreference
            android:title="@string/cover_screen_edges"
            android:key="harm_cover_edges"
            android:persistent="true"
            android:defaultValue="true"
            android:summary="@string/cover_screen_edges_in_status_bar"
            />
    </PreferenceCategory>

        <PreferenceCategory
            android:key="game"
            android:title="@string/game"
        >
            <ListPreference
                android:enabled="false"
                android:title="@string/run_background"
                android:key="harm_run_background"
                android:persistent="true"
                android:defaultValue="2"
                android:summary="@string/control_game_state_when_application_in_background"
                android:entryValues="@array/run_background_values"
                android:entries="@array/run_background_labels"
            />
            <MultiSelectListPreference
                android:title="@string/map_back_key"
                android:key="harm_map_back"
                android:persistent="true"
                android:summary="@string/setup_back_key_function"
                android:entryValues="@array/map_back_values"
                android:entries="@array/map_back_labels"
                android:defaultValue="@array/map_back_values"
            />
            <CheckBoxPreference
                android:title="@string/standalone_game_data_directory"
                android:key="harm_game_standalone_directory"
                android:persistent="true"
                android:defaultValue="true"
                android:summary="@string/make_game_use_standalone_data_directory"
                />
            <Preference
                android:key="standalone_game_data_directories"
                android:title="@string/show_game_datas_standalone_directories"
                android:persistent="false"/>
            <CheckBoxPreference
                android:title="@string/redirect_output_to_file"
                android:key="harm_redirect_output_to_file"
                android:persistent="true"
                android:defaultValue="true"
                android:summary="@string/save_game_runtime_output_log_to_stdout_txt_stderr_txt"
            />
            <CheckBoxPreference
                android:title="@string/function_key_toolbar"
                android:key="harm_function_key_toolbar"
                android:persistent="true"
                android:defaultValue="false"
                android:summary="@string/show_function_key_toolbar_when_open_input_method"
                />
            <EditTextPreference
                android:title="@string/function_key_toolbar_offset"
                android:key="harm_function_key_toolbar_y"
                android:persistent="true"
                android:defaultValue="0"
                android:inputType="number"
                android:summary="@string/setup_function_key_toolbar_position_offset"
                android:dependency="harm_function_key_toolbar"
                />
        </PreferenceCategory>
        
        <PreferenceCategory
            android:key="launcher"
            android:title="@string/launcher"
            >
            <CheckBoxPreference
                android:title="@string/launcher_orientation"
                android:key="harm_launcher_orientation"
                android:persistent="true"
                android:defaultValue="false"
                android:summary="@string/launcher_orientation_follow_system"
            />
            <!--<CheckBoxPreference
                android:title="Reopen launcher"
                android:key="harm_reopen_launcher"
                android:persistent="true"
                android:defaultValue="false"
                android:summary="Open launcher when game finished"
                />-->
            <CheckBoxPreference
                android:title="@string/hide_ad_bar"
                android:key="harm_hide_ad_bar"
                android:persistent="true"
                android:defaultValue="true"
                android:summary="@string/hide_ad_bar_in_launcher"
            />
            <CheckBoxPreference
                android:title="@string/auto_save_button_settings"
                android:key="harm_autosave_button_settings"
                android:persistent="true"
                android:defaultValue="true"
                android:summary="@string/auto_save_buttons_settings_immediately_if_changed"
                />
            <ListPreference
                android:title="@string/language"
                android:key="harm_lang"
                android:persistent="true"
                android:defaultValue="system"
                android:summary="@string/setup_launcher_language"
                android:entryValues="@array/lang_values"
                android:entries="@array/lang_labels"
                />
            <ListPreference
                android:title="@string/theme"
                android:key="harm_theme"
                android:persistent="true"
                android:defaultValue="system"
                android:summary="@string/setup_launcher_theme"
                android:entryValues="@array/theme_values"
                android:entries="@array/theme_labels"
                />
        </PreferenceCategory>
    </PreferenceScreen>
