<menu xmlns:android="http://schemas.android.com/apk/res/android">
<!--
    <item android:id="@+id/menu_settings"
        android:title="@string/menu_settings"
	android:orderInCategory="100" />
    -->

	<item
        android:id="@+id/main_menu_settings"
        android:title="@string/settings"
        android:showAsAction="never"/>

    <item
		android:id="@+id/main_menu_changes"
        android:title="@string/changes"
        android:showAsAction="never"/>
    <item
		android:id="@+id/main_menu_source"
        android:title="@string/about"
        android:showAsAction="never"/>
    <item
		android:id="@+id/main_menu_help"
        android:title="@string/help"
        android:showAsAction="never"/>

    <item
        android:id="@+id/main_menu_preferences"
        android:title="@string/preference"
        android:showAsAction="never">
        <menu>
            <item
                android:id="@+id/main_menu_save_settings"
                android:title="@string/save_launcher_settings"
                android:showAsAction="never"/>
            <item
                android:id="@+id/main_menu_backup_settings"
                android:title="@string/backup_settings"
                android:showAsAction="never"/>
            <item
                android:id="@+id/main_menu_restore_settings"
                android:title="@string/restore_settings"
                android:showAsAction="never"/>
        </menu>
    </item>

    <item
        android:id="@+id/main_menu_option_menu"
        android:title="@string/option"
        android:showAsAction="never">
        <menu>
            <item
                android:id="@+id/main_menu_extract_resource"
                android:title="@string/extract_resource"
                android:showAsAction="never"/>
            <item
                android:id="@+id/main_menu_support_developer"
                android:title="@string/support_the_developer"
                android:showAsAction="never"/>
            <item
                android:id="@+id/main_menu_check_for_update"
                android:title="@string/check_for_update"
                android:showAsAction="never"/>
            <item
                android:id="@+id/main_menu_debug"
                android:title="@string/debug"
                android:showAsAction="never"/>
        </menu>
    </item>

    <item
        android:id="@+id/main_menu_other_menu"
        android:title="@string/other"
        android:showAsAction="never">
        <menu>
            <item
                android:id="@+id/main_menu_cvar_list"
                android:title="@string/special_cvar_list"
                android:showAsAction="never"/>
            <item
                android:id="@+id/main_menu_runtime_log"
                android:title="@string/last_runtime_log"
                android:showAsAction="never"/>
            <item
                android:id="@+id/main_menu_translators"
                android:title="@string/translators"
                android:showAsAction="never"/>
        </menu>
    </item>

    <item
        android:id="@+id/main_menu_dev_menu"
        android:title="Dev"
        android:visible="false"
        android:showAsAction="never">
        <menu>
            <item
                android:id="@+id/main_menu_show_preference"
                android:title="Show preference"
                android:showAsAction="never"/>
            <item
                android:id="@+id/main_menu_debug_text_history"
                android:title="Debug text history"
                android:showAsAction="never"/>
            <item
                android:id="@+id/main_menu_gen_exception"
                android:title="Throw exception"
                android:showAsAction="never"/>
            <item
                android:id="@+id/main_menu_test"
                android:title="TEST"
                android:showAsAction="never"/>
        </menu>
    </item>
</menu>
